--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -5787,6 +5787,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "26a2b7a9fc9e8d3465adfa171ebb803ede432e4e6671e915d452d64187621f66"
+   }
   }
  },
  "nbformat": 4,
