--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "1a545d1c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Hotels (Python 3.10.9)' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -n Hotels ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -19,8 +30,7 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n",
-    "import pickle "
+    "warnings.filterwarnings(\"ignore\") "
    ]
   },
   {
@@ -5786,7 +5796,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.9"
   },
   "vscode": {
    "interpreter": {
