--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -30,7 +30,8 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import warnings\n",
-    "warnings.filterwarnings(\"ignore\") "
+    "warnings.filterwarnings(\"ignore\")\n",
+    "import pickle "
    ]
   },
   {
@@ -247,7 +248,7 @@
    ],
    "source": [
     "df= pd.read_csv(\"Hotel Reservations.csv\")\n",
-    "df.head(5)"
+    "df.head(10)"
    ]
   },
   {
